--- a/src/css/partials/components/nav.scss
+++ b/src/css/partials/components/nav.scss
@@ -33,10 +33,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
       width: 30%;
       margin: 25px 0;
       padding: 0 25px;
-    @include mq($from:sm, $until:xl){
+    @include mq($from:md, $until:xl){
       width: 50%;
       }
-    @include mq($from:xs, $until:sm){
+    @include mq($from:xs, $until:md){
       width: 75%;
       }
     }
@@ -151,6 +151,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
       background-color: #fff;
       z-index: 1000;
     }
+    @include mq($from:xs, $until:md) {
+      top: 0;
+    }
   }
 
     &__sub-menu {
@@ -172,6 +175,11 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
       display: none;
       padding: 0;
       background-color: #fff;
+      visibility: visible;
+      position: static;
+      width: 100%;
+      color: #000;
+      opacity: 1;
     }
 
     li {
@@ -198,6 +206,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
     font-size: 13px;
     text-transform: none;
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      @include mq($from:xs, $until:xl){
+      color: #000;
+      padding: 0;
+      }
 
     &:hover {
       background-color: #000;
@@ -258,6 +270,11 @@ background-image: url(../img/arrow.svg);
     display: block;
     top: 101px;
     cursor: pointer;
+      @include mq($from:xs, $until:xl){
+      opacity: 0;
+      visibility: hidden;
+      display: none;
+      }
 }
 
 .totop {
