--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -16,9 +16,9 @@ include ../abstracts/bemto/bemto.pug
             a(href="index.html") Главная
           +e.LI.item
             +e.A.link(href="about-us.html") Компания
-            +e.subhamburger
-               +b.A.subhamburger(href="#")
-            +e.UL.sub-menu
+            +e.subhamburger-1
+               +b.A.subhamburger-1(href="#")
+            +e.UL.sub-menu--1
               li
                 a(href="about-us.html") О компании
               li
@@ -33,9 +33,9 @@ include ../abstracts/bemto/bemto.pug
                 a(href="reviews.html")  Отзывы
           +e.LI.item
             +e.A.link(href="services.html") Услуги
-            +e.subhamburger
-               +b.A.subhamburger(href="#")
-            +e.UL.sub-menu
+            +e.subhamburger-2
+               +b.A.subhamburger-2(href="#")
+            +e.UL.sub-menu--2
               li
                 a(href="page.html")  Сертификация
               li
