--- a/src/css/partials/components/nav.scss
+++ b/src/css/partials/components/nav.scss
@@ -79,7 +79,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
     display: none;
     text-align: center;
     position: absolute;
-    top: 25px;
+    top: 15px;
     right: 15px;
     width: 50px;
     text-align: center;
@@ -87,6 +87,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
     line-height: 50px;
     color: #fff;
     background-color: $blue;
+    @include mq($from:sm) {
+      top: 25px;
+    }
     i{
       color: $white;
     }
@@ -95,7 +98,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
     }
   }
 
-  &__subhamburger {
+  &__subhamburger-1,
+  &__subhamburger-2{
     position: absolute;
     display: none;
     width: 56px;
@@ -145,14 +149,17 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
       border-top: 1px solid #e6e6e6;
       display: none;
       position: absolute;
-      top: 110px;
+      top: 75px;
       width: 100%;
       left: 0;
       background-color: #fff;
       z-index: 1000;
     }
-    @include mq($from:xs, $until:md) {
-      top: 0;
+    @include mq($from:sm, $until:md) {
+      top: 105px;
+    }
+    @include mq($from:md, $until:xl) {
+      top: 110px;
     }
   }
 
@@ -205,7 +212,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
     padding: 10px 20px;
     font-size: 13px;
     text-transform: none;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
       @include mq($from:xs, $until:xl){
       color: #000;
       padding: 0;
@@ -214,6 +220,10 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', e
     &:hover {
       background-color: #000;
       color: #fff;
+      @include mq($from:xs, $until:xl){
+         background-color: transparent;
+         color: #000;
+       }
       }
      }
     }
@@ -271,9 +281,7 @@ background-image: url(../img/arrow.svg);
     top: 101px;
     cursor: pointer;
       @include mq($from:xs, $until:xl){
-      opacity: 0;
-      visibility: hidden;
-      display: none;
+display: none;
       }
 }
 
@@ -302,5 +310,15 @@ text-indent: -9999px;
     left: 13px;
     top: 8px;
     font-size: 14px;
+  }
+}
+
+.hamburger-active {
+  background-color: #000;
+}
+
+.subhamburger-active {
+  &:before {
+    display: none;
   }
 }
