--- a/src/css/partials/components/promo-slider.scss
+++ b/src/css/partials/components/promo-slider.scss
@@ -3,7 +3,9 @@
   &__bgr {
     height: 540px;
     background-size: cover;
-
+    @include mq($from:xs, $until:md){
+      height: 400px;
+    }
     &:nth-child(1) {
       background-image: url(../img/slider1.jpg);
     }
@@ -17,6 +19,9 @@
 
   &__wrapper {
     width: 40%;
+    @include mq($from:xs, $until:md){
+      width: 100%;
+    }
   }
 
   &__title {
@@ -25,6 +30,10 @@
     font-size: $font-size-h1;
     text-shadow: rgba(0, 0, 0, 0.247059) 0px 2px 3px;
     margin-bottom: 20px;
+    @include mq($from:xs, $until:md){
+      font-size: 30px;
+      padding-top: 40px;
+      }
   }
 
   &__text {
@@ -49,6 +58,7 @@
     &:hover {
       background-color: $grey;
     }
+
   }
 
   &__contact {
@@ -56,6 +66,10 @@
     margin-left: 8px;
     &:hover {
       background-color: $blue;
+    }
+    @include mq($from:xs, $until:md){
+      margin-left: 0;
+      margin-top: 10px;
     }
   }
 
@@ -74,6 +88,7 @@
   margin: auto 0;
   opacity: 0;
   transition: 1s;
+
 
   &:before {
     content: '';
@@ -114,4 +129,7 @@
 
 .promo-slider:hover .slick-arrow {
   opacity: 1;
+    @include mq($from:xs, $until:md){
+      opacity: 0;
+    }
 }
