--- a/src/html/partials/abstracts/mixins/_promo-item.pug
+++ b/src/html/partials/abstracts/mixins/_promo-item.pug
@@ -8,7 +8,7 @@ mixin promoItem(img, title, subtitle, text)
         +e.P.subtitle #{subtitle}
       +e.contant
         +e.P.text #{text}
-        +e.A.btn(href="#") Continue
+        +e.A.btn(href="page.html") Continue
           i.fa.fa-chevron-right
 
 
