--- a/src/html/partials/abstracts/mixins/_services-item.pug
+++ b/src/html/partials/abstracts/mixins/_services-item.pug
@@ -8,5 +8,5 @@ mixin servicesItem(img,title,text)
         +e.inner
           +e.H3.name #{title}
           +e.P.text #{text}
-          +e.A.btn(href="#") Читать далее
+          +e.A.btn(href="page.html") Читать далее
             i.fa.fa-chevron-right
