--- a/src/html/partials/abstracts/mixins/_staff-item.pug
+++ b/src/html/partials/abstracts/mixins/_staff-item.pug
@@ -7,11 +7,11 @@ mixin staffItem(img, name, post, text)
       +e.P.subtitle #{post}
       +e.P.text #{text}
     +e.socials
-      +e.A.btn(href="#")
+      +e.A.btn(href="facebook.com" target="_blank")
         i.fa.fa-facebook
-      +e.A.btn(href="#")
+      +e.A.btn(href="facebook.com" target="_blank")
         i.fa.fa-twitter
-      +e.A.btn(href="#")
+      +e.A.btn(href="facebook.com" target="_blank")
         i.fa.fa-linkedin
-      +e.A.btn(href="#")
+      +e.A.btn(href="facebook.com" target="_blank")
         i.fa.fa-google-plus
