--- a/src/html/partials/components/faq.pug
+++ b/src/html/partials/components/faq.pug
@@ -29,31 +29,30 @@ include ../abstracts/bemto/bemto.pug
             +e.H4.subtitle.subtitle-close Who can file a freight claim?
             +e.P.subtext Either the shipper, consignee, billing party or a third party logistics company may file a freight claim against a shipment, however only one claim per shipment maybe honored by the carri
 
-        +e.wrapper
       +b.ASIDE.news-meta
         +e.wrapper--black
-          +e.A.servises-title(href="#") Сертификация
+          +e.A.servises-title(href="page.html") Сертификация
           +e.UL.servises-list
             +e.LI.servises-item
-              a(href="#") — Сертификат ТР ТС
+              a(href="page.html") — Сертификат ТР ТС
             +e.LI.servises-item
-              a(href="#") — Декларация ТР ТС
+              a(href="page.html") — Декларация ТР ТС
             +e.LI.servises-item
-              a(href="#") — Обязательная сертификация ГОСТ Р
+              a(href="page.html") — Обязательная сертификация ГОСТ Р
             +e.LI.servises-item
-              a(href="#") — Добровольная сертификация ГОСТ Р
-          +e.A.servises-title(href="#") Разработка технической документации
-          +e.A.servises-title(href="#") Роспотребнадзор
+              a(href="page.html") — Добровольная сертификация ГОСТ Р
+          +e.A.servises-title(href="page.html") Разработка технической документации
+          +e.A.servises-title(href="page.html") Роспотребнадзор
         +e.wrapper
           +e.H2.title Последние новости
-          +e.A.sub-title(href="#") Новость 1
+          +e.A.sub-title(href="news.html") Новость 1
           +e.P.time 25.03.2016
-          +e.A.sub-title(href="#") Seafield logistics goes into administration
+          +e.A.sub-title(href="news.html") Seafield logistics goes into administration
           +e.P.time 25.03.2016
-          +e.A.sub-title(href="#") Transport managers grow scarce
+          +e.A.sub-title(href="news.html") Transport managers grow scarce
           +e.P.time 25.03.2016
         +e.wrapper--blue
           +e.H3.question How can we help you?
           +e.P.text Our customer service standards provide information on how we will handle your enquiry. There is also compliments and complaints information to help you when you lodge feedback with us.
-          +e.A.btn(href="#") contact us
+          +e.A.btn(href="contact.html") contact us
             .fa.fa-chevron-right
