--- a/src/html/partials/components/interactive.pug
+++ b/src/html/partials/components/interactive.pug
@@ -6,7 +6,7 @@ include ../abstracts/bemto/bemto.pug
       +e.H2.title From around the corner to around the globe.
       +e.P.text We will take care of your cargo or your passenger and deliver them safe and on time.
       +e.btn-inner
-        +e.A.btn-quote(href="#") Make a quote
+        +e.A.btn-quote(href="page.html") Make a quote
           i.fa.fa-chevron-right
-        +e.A.btn-contact(href="#") Contact Us
+        +e.A.btn-contact(href="contact.html") Contact Us
           i.fa.fa-chevron-right
