--- a/src/html/partials/components/page-news.pug
+++ b/src/html/partials/components/page-news.pug
@@ -14,19 +14,19 @@ include ../abstracts/bemto/bemto.pug
       +b.ASIDE.news-meta
         +e.wrapper
           +e.H2.title Последние новости
-          +e.A.sub-title(href="#") Новость 1
+          +e.A.sub-title(href="news.html") Новость 1
           +e.P.time 25.03.2016
-          +e.A.sub-title(href="#") Seafield logistics goes into administration
+          +e.A.sub-title(href="news.html") Seafield logistics goes into administration
           +e.P.time 25.03.2016
-          +e.A.sub-title(href="#") Transport managers grow scarce
+          +e.A.sub-title(href="news.html") Transport managers grow scarce
           +e.P.time 25.03.2016
         +e.wrapper--pd
           +e.H2.title Рубрики
-          +e.A.heading(href="#") Jobs
-          +e.A.heading(href="#") Logistics
-          +e.A.heading(href="#") Tip & Trick
-          +e.A.heading(href="#") Transport
-          +e.A.heading(href="#") Warehouse
+          +e.A.heading(href="news.html") Jobs
+          +e.A.heading(href="news.html") Logistics
+          +e.A.heading(href="news.html") Tip & Trick
+          +e.A.heading(href="news.html") Transport
+          +e.A.heading(href="news.html") Warehouse
         +e.wrapper--blue
           +e.H3.question How can we help you?
           +e.P.text Our customer service standards provide information on how we will handle your enquiry. There is also compliments and complaints information to help you when you lodge feedback with us.
@@ -34,16 +34,16 @@ include ../abstracts/bemto/bemto.pug
             .fa.fa-chevron-right
         +e.wrapper--pd
           +e.H2.title Теги
-          +e.A.tag(href="#") Committee
-          +e.A.tag(href="#") Grow
-          +e.A.tag(href="#") Huge
-          +e.A.tag(href="#") Jobs
-          +e.A.tag(href="#") Logistic
-          +e.A.tag(href="#") Manager
-          +e.A.tag(href="#") Recruit
-          +e.A.tag(href="#") Tip
-          +e.A.tag(href="#") Transport
-          +e.A.tag(href="#") Trick
-          +e.A.tag(href="#") Warehouse
+          +e.A.tag(href="news.html") Committee
+          +e.A.tag(href="news.html") Grow
+          +e.A.tag(href="news.html") Huge
+          +e.A.tag(href="news.html") Jobs
+          +e.A.tag(href="news.html") Logistic
+          +e.A.tag(href="news.html") Manager
+          +e.A.tag(href="news.html") Recruit
+          +e.A.tag(href="news.html") Tip
+          +e.A.tag(href="news.html") Transport
+          +e.A.tag(href="news.html") Trick
+          +e.A.tag(href="news.html") Warehouse
 
 
