--- a/src/html/partials/components/stripe--blue.pug
+++ b/src/html/partials/components/stripe--blue.pug
@@ -2,6 +2,6 @@
   .container
     .row
       +e.P.text Свяжитесь с нами мур-мур
-      +e.A.btn(href="#") Контакты
+      +e.A.btn(href="contact.html") Контакты
         i.fa.fa-chevron-right
 
