--- a/src/css/partials/components/form.scss
+++ b/src/css/partials/components/form.scss
@@ -48,19 +48,153 @@
      width: 100%;
      background: rgba(0, 0, 0, 0.02);
     padding: 0;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+    // border: 1px solid rgba(0, 0, 0, 0.1);
     height: 45px;
     max-width: 100%;
     padding: 10px;
     box-sizing: border-box;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1) inset;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2) inset;
     border-radius: 2px;
+    outline: none;
    }
   }
 
   .form-group:nth-child(7) {
     width: 100%;
   }
+
+  .btn {
+    display: inline-block;
+    outline: none;
+    width: 100%;
+    border: none;
+    color: #fff;
+    background-image: none;
+    height: 45px;
+    line-height: 45px;
+    padding: 0 30px;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: bold;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+    background-color: $blue;
+    transition: .5s;
+
+    &:hover {
+      background-color: #000;
+    }
+  }
+}
+
+.form--questionheader {
+  margin-top: 20px;
+
+  h3 {
+    display: none;
+  }
+  p {
+    width: 80%;
+    padding-left: 10%;
+    color: #666e70;
+    line-height: 1.8;
+  }
+
+  .form-group{
+    width: 50%;
+    padding: 10px;
+    margin-bottom: 7px;
+    @include mq($from:xs, $until:md){
+      width: 100%;
+    }
+   .form__input,
+   .form__country-list,
+   .form__region-list,
+   .form__textarea {
+     width: 100%;
+     background: rgba(0, 0, 0, 0.02);
+    padding: 0;
+    // border: 1px solid rgba(0, 0, 0, 0.1);
+    height: 45px;
+    max-width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2) inset;
+    border-radius: 2px;
+    outline: none;
+   }
+  }
+
+  .form-group:nth-child(7) {
+    width: 100%;
+  }
+
+
+  .btn {
+    display: inline-block;
+    outline: none;
+    width: 100%;
+    border: none;
+    color: #fff;
+    background-image: none;
+    height: 45px;
+    line-height: 45px;
+    padding: 0 30px;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: bold;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+    text-transform: uppercase;
+    background-color: $blue;
+    transition: .5s;
+
+    &:hover {
+      background-color: #000;
+    }
+  }
+}
+
+.form--call {
+  margin-top: 20px;
+
+  h3 {
+    display: none;
+  }
+  p {
+    width: 80%;
+    padding-left: 10%;
+    color: #666e70;
+    line-height: 1.8;
+  }
+
+  .form-group{
+    width: 50%;
+    padding: 10px;
+    margin-bottom: 7px;
+    @include mq($from:xs, $until:md){
+      width: 100%;
+    }
+   .form__input,
+   .form__country-list,
+   .form__region-list, {
+     width: 100%;
+     background: rgba(0, 0, 0, 0.02);
+    padding: 0;
+    // border: 1px solid rgba(0, 0, 0, 0.1);
+    height: 45px;
+    max-width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
+    box-shadow: 1px 1px 1px 1px rgba(0, 0, 0, 0.2) inset;
+    border-radius: 2px;
+    outline: none;
+   }
+  }
+
+  .form-group:nth-child(5) {
+    width: 100%;
+  }
+
 
   .btn {
     display: inline-block;
