--- a/src/html/partials/components/page-about-us.pug
+++ b/src/html/partials/components/page-about-us.pug
@@ -21,9 +21,9 @@ include ../abstracts/bemto/bemto.pug
         +e.contact-stripe
           +e.P.stripe-title We will take care of your cargo or your passenger and deliver them safe and on time.
           +e.btn-inner
-          +e.A.btn-contact(href="#") Контакты
+          +e.A.btn-contact(href="contact.html") Контакты
             i.fa.fa-chevron-right
-          +e.A.btn-services(href="#") Услуги
+          +e.A.btn-services(href="services/html") Услуги
             i.fa.fa-chevron-right
         .row
           .col-xs-12.col-md-6
@@ -50,29 +50,29 @@ include ../abstracts/bemto/bemto.pug
 
       +b.ASIDE.news-meta
         +e.wrapper--black
-          +e.A.servises-title(href="#") Сертификация
+          +e.A.servises-title(href="page.html") Сертификация
           +e.UL.servises-list
             +e.LI.servises-item
-              a(href="#") — Сертификат ТР ТС
+              a(href="page.html") — Сертификат ТР ТС
             +e.LI.servises-item
-              a(href="#") — Декларация ТР ТС
+              a(href="page.html") — Декларация ТР ТС
             +e.LI.servises-item
-              a(href="#") — Обязательная сертификация ГОСТ Р
+              a(href="page.html") — Обязательная сертификация ГОСТ Р
             +e.LI.servises-item
-              a(href="#") — Добровольная сертификация ГОСТ Р
-          +e.A.servises-title(href="#") Разработка технической документации
-          +e.A.servises-title(href="#") Роспотребнадзор
+              a(href="page.html") — Добровольная сертификация ГОСТ Р
+          +e.A.servises-title(href="page.html") Разработка технической документации
+          +e.A.servises-title(href="page.html") Роспотребнадзор
         +e.wrapper
           +e.H2.title Последние новости
-          +e.A.sub-title(href="#") Новость 1
+          +e.A.sub-title(href="news.html") Новость 1
           +e.P.time 25.03.2016
-          +e.A.sub-title(href="#") Seafield logistics goes into administration
+          +e.A.sub-title(href="news.html") Seafield logistics goes into administration
           +e.P.time 25.03.2016
-          +e.A.sub-title(href="#") Transport managers grow scarce
+          +e.A.sub-title(href="news.html") Transport managers grow scarce
           +e.P.time 25.03.2016
         +e.wrapper--blue
           +e.H3.question How can we help you?
           +e.P.text Our customer service standards provide information on how we will handle your enquiry. There is also compliments and complaints information to help you when you lodge feedback with us.
-          +e.A.btn(href="#") contact us
+          +e.A.btn(href="contact.html") contact us
             .fa.fa-chevron-right
 
