--- a/src/html/partials/components/promo-slider.pug
+++ b/src/html/partials/components/promo-slider.pug
@@ -8,9 +8,9 @@ include ../abstracts/bemto/bemto.pug
         +e.H1.title Standard sea freight services
         +e.P.text If low costs matter for your shipment, try our sea freight services.
         +e.btn-inner
-          +e.A.more(href="#") Read more
+          +e.A.more(href="page.html") Read more
             i.fa.fa-chevron-right
-          +e.A.contact(href="#") Contact us
+          +e.A.contact(href="contact.html") Contact us
             i.fa.fa-chevron-right
   +e.bgr
     .container
@@ -18,9 +18,9 @@ include ../abstracts/bemto/bemto.pug
         +e.H1.title International road transport
         +e.P.text The road transport industry is the backbone of strong economies and dynamic societies.
         +e.btn-inner
-          +e.A.more(href="#") Read more
+          +e.A.more(href="page.html") Read more
             i.fa.fa-chevron-right
-          +e.A.contact(href="#") Contact us
+          +e.A.contact(href="contact.html") Contact us
             i.fa.fa-chevron-right
   +e.bgr
     .container
@@ -28,7 +28,7 @@ include ../abstracts/bemto/bemto.pug
         +e.H1.title Warehousing and storage
         +e.P.text Warehouse services can be offered as a single service or combined with transportation.
         +e.btn-inner
-          +e.A.more(href="#") Read more
+          +e.A.more(href="page.html") Read more
             i.fa.fa-chevron-right
-          +e.A.contact(href="#") Contact us
+          +e.A.contact(href="contact.html") Contact us
             i.fa.fa-chevron-right
