--- a/src/html/partials/components/nav.pug
+++ b/src/html/partials/components/nav.pug
@@ -13,7 +13,7 @@ include ../abstracts/bemto/bemto.pug
             i.fa.fa-bars
         +e.UL.list
           +e.LI.item
-            a(href="index.html") Главная
+            +e.A.link--active(href="index.html") Главная
           +e.LI.item
             +e.A.link(href="about-us.html") Компания
             +e.subhamburger-1
