--- a/src/html/partials/components/partners.pug
+++ b/src/html/partials/components/partners.pug
@@ -53,6 +53,11 @@ include ../abstracts/bemto/bemto.pug
             +e.wrapper
               img(src="img/p5.png")
               +e.P.name Logistic
+        +b.partners-stripe
+          .row
+            +e.P.text Would you like to learn more? Call +012 222 989899
+            +e.A.btn(href="contact.html") Contact
+              i.fa.fa-chevron-right
       +b.ASIDE.news-meta
         +e.wrapper--black
           +e.A.servises-title(href="page.html") Сертификация
