--- a/src/css/partials/base/_template.scss
+++ b/src/css/partials/base/_template.scss
@@ -22,6 +22,10 @@ body {
   line-height: $line-height;
 }
 
+p {
+  font-family: $font-family;
+}
+
 a {
   text-decoration: none;
   @include transition();
