--- a/src/css/partials/components/page-reviews.scss
+++ b/src/css/partials/components/page-reviews.scss
@@ -13,6 +13,7 @@
     max-height: 100%;
     padding-top: 40px;
     padding-bottom: 20px;
+    padding-right: 15px;
     img {
       max-width: 100%;
       max-height: 100%;
