--- a/src/css/partials/components/stripe.scss
+++ b/src/css/partials/components/stripe.scss
@@ -12,6 +12,8 @@
   .row {
     justify-content: space-between;
     align-items: center;
+    padding-right: .625rem;
+    padding-left: .625rem;
       @include mq($from:xs, $until:md){
       flex-direction: column;
     }
@@ -61,4 +63,47 @@
 .map {
   width: 100%;
   height: 450px;
+}
+
+.partners-stripe {
+  padding-top: 30px;
+  .row {
+    background-color: $yellow;
+    justify-content: space-between;
+    margin-left: 1px;
+    margin-right: 10px;
+    align-items: center;
+      @include mq($from:xs, $until:md){
+      flex-direction: column;
+    }
+  }
+  &__text {
+    margin: 30px 0;
+    color: #21242b;
+    line-height: 1.1;
+    font-weight: 700;
+    padding-left: 30px;
+    font-size: 18px;
+    font-family: $font-family-roboto;
+  }
+  &__btn {
+    color: $white;
+    font-weight: $bold;
+    height: 40px;
+    line-height: 40px;
+    padding: 0 25px;
+    background-color: #21242b;
+    text-transform: uppercase;
+    font-family: $font-family;
+    margin-right: 30px;
+    @include transition;
+      @include mq($from:xs, $until:md){
+      margin-left: 30px;
+      margin-bottom: 20px;
+    }
+
+    &:hover {
+      background-color: $blue;
+    }
+  }
 }
