--- a/src/html/partials/components/contact.pug
+++ b/src/html/partials/components/contact.pug
@@ -1,6 +1,8 @@
 include ../abstracts/mixins/_contact-item.pug
 include ../abstracts/bemto/bemto.pug
 
+//Contacts
+
 +b.SECTION.contact
   .container
     .row
