--- a/src/html/partials/components/page-news.pug
+++ b/src/html/partials/components/page-news.pug
@@ -1,6 +1,7 @@
 include ../abstracts/mixins/_page-news-item.pug
 include ../abstracts/bemto/bemto.pug
 
+//Page News
 +b.white-bgr
   .container
     .row
