--- a/src/html/partials/components/page-reviews.pug
+++ b/src/html/partials/components/page-reviews.pug
@@ -1,6 +1,7 @@
 include ../abstracts/mixins/_reviews-item.pug
 include ../abstracts/bemto/bemto.pug
 
+//Page Reviews
 +b.white-bgr
   .container
     .row
