--- a/src/css/partials/components/news.scss
+++ b/src/css/partials/components/news.scss
@@ -1,22 +1,33 @@
+//News
+
 .news-block {
   background-color: #fff;
   padding: 40px 0;
+  &__title-wrapper {
+    position: relative;
+    z-index: 1;
+    padding-right: 20px;
+    background-color: #fff;
+  }
 
   &__title {
     font-size: $font-size-h2;
     font-weight: bold;
+    position: relative;
     padding-bottom: 20px;
+    background-color: #fff;
     span {
       color: $blue;
     }
 
     &:after {
     content: "";
-    position: relative;
+    position: absolute;
     display: inline-block;
     background: url(../img/bg-heading.svg);
-    min-width: 40%;
-    margin-left: 25px;
+    width: 100%;
+    left: 0;
+    top: 20px;
     height: 20px;
     }
   }
