--- a/src/css/partials/components/reviews.scss
+++ b/src/css/partials/components/reviews.scss
@@ -1,6 +1,12 @@
+//Reviews
+
 .reviews-block {
   background-color: #f2f4f8;
   padding: 50px 0 35px;
+  &__wrapper {
+    margin-left: -10px;
+    margin-right: -10px;
+  }
   &__title {
     font-size: $font-size-h2;
     font-weight: bold;
@@ -11,7 +17,7 @@
 
     &:after {
     content: "";
-    position: relative;
+    position: absolute;
     display: inline-block;
     background: url(../img/bg-heading.svg);
     min-width: 40%;
@@ -59,14 +65,14 @@
 }
 
 .slick-next {
-  right: 60px;
+  right: 55px;
       @include mq($from:xs, $until:md){
       right: 25%;
     }
 }
 
 .slick-prev {
-  right: 15px;
+  right: 10px;
   border-left: none;
     &:after {
     transform: rotate(-180deg);
@@ -86,7 +92,8 @@
     border: 2px solid #cce9ed;
     position: relative;
     margin-bottom: 18px;
-    margin-right: 15px;
+    margin-right: 10px;
+    margin-left: 10px;
     z-index: 100;
     &:after {
           content: "";
