--- a/src/html/partials/components/news.pug
+++ b/src/html/partials/components/news.pug
@@ -1,10 +1,12 @@
 include ../abstracts/mixins/_news-item.pug
 include ../abstracts/bemto/bemto.pug
 
+//News
 +b.SECTION.news-block
   .container
-    +e.H2.title Latest
-      span news.
+    +e.title-wrapper
+      +e.H2.title Latest
+        span news.
     .row
       .col-xs-12.col-md-6.col-xl-4
         +newsItem("6.jpg", "25", "Мар", "Новость 1", "It’s a well-known fact that happy and motivated workers produce better results. A recent study found that happier workers were 12%...", "Ekaterina", "Warehouse")
