--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -46,6 +46,7 @@
 @import "partials/components/page-reviews";
 @import "partials/components/page";
 @import "partials/components/page-404";
+@import "partials/components/single-news";
 
 // Components
 
