--- a/src/html/partials/components/_head.pug
+++ b/src/html/partials/components/_head.pug
@@ -52,4 +52,5 @@ head
 
   script(src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js")
   script(src="https://use.fontawesome.com/b8dc28bd9a.js")
+  script(src="https://maps.google.com/maps/api/js?key=AIzaSyCbFBllrMkXPOoe1YbN3aXTYV0cesewVhc")
 
