--- a/src/html/partials/components/contact.pug
+++ b/src/html/partials/components/contact.pug
@@ -113,3 +113,6 @@ include ../abstracts/bemto/bemto.pug
           span 08:00 a.m – 06:00 p.m
         +e.LI.item Saturday — Sunday:
           span Closed
+    .row
+      +b.map(id="map")
+
