--- a/src/html/partials/components/features.pug
+++ b/src/html/partials/components/features.pug
@@ -3,7 +3,8 @@ include ../abstracts/bemto/bemto.pug
 //Features
 +b.SECTION.features
   .container
-    +e.H2.title Что мы
+    +e.H2.title
+      +e.title-wrapper Что мы
        span предлагаем.
     .row
       .col-xs-12.col-md-6.col-lg-4
