--- a/src/html/partials/components/news.pug
+++ b/src/html/partials/components/news.pug
@@ -4,8 +4,8 @@ include ../abstracts/bemto/bemto.pug
 //News
 +b.SECTION.news-block
   .container
-    +e.title-wrapper
-      +e.H2.title Latest
+    +e.H2.title
+      +e.title-wrapper Latest
         span news.
     .row
       .col-xs-12.col-md-6.col-xl-4
