--- a/src/css/partials/components/news.scss
+++ b/src/css/partials/components/news.scss
@@ -8,6 +8,10 @@
     z-index: 1;
     padding-right: 20px;
     background-color: #fff;
+    color: #000;
+    span {
+     color: $blue;
+    }
   }
 
   &__title {
@@ -16,9 +20,6 @@
     position: relative;
     padding-bottom: 20px;
     background-color: #fff;
-    span {
-      color: $blue;
-    }
 
     &:after {
     content: "";
@@ -27,7 +28,7 @@
     background: url(../img/bg-heading.svg);
     width: 100%;
     left: 0;
-    top: 20px;
+    top: 16px;
     height: 20px;
     }
   }
