--- a/src/html/partials/abstracts/mixins/_page-news-item.pug
+++ b/src/html/partials/abstracts/mixins/_page-news-item.pug
@@ -7,15 +7,15 @@ mixin PageNewsItem(date, mounth, img, title,author,catigories, text)
           +e.P.date #{date}
       .col-xs-12.col-sm-10
         +e.img
-          +e.A.link(href="#")
+          +e.A.link(href="single-news.html")
             img(src= "img/" + img alt)
         +e.contant
          +e.A.title #{title}
         +e.meta
           i.fa.fa-user
-          +e.A.author(href="news.html") #{author}
+          +e.A.author(href="single-news.html") #{author}
           i.fa.fa-folder-open
-          +e.A.catigories(href="news.html") #{catigories}
+          +e.A.catigories(href="single-news.html") #{catigories}
         +e.P.text #{text}
-        +e.A.btn(href="news.html") Читать далее
+        +e.A.btn(href="single-news.html") Читать далее
           .fa.fa-chevron-right
