--- a/src/html/partials/components/footer.pug
+++ b/src/html/partials/components/footer.pug
@@ -8,18 +8,10 @@ include ../abstracts/bemto/bemto.pug
     +e.tabs
       +e.UL.tabs-list
         +e.LI.tabs-link.active
-          a(href="#tab01") Заказать сертификат
-        +e.LI.tabs-link
-          a(href="#tab02") Задать вопрос
-        +e.LI.tabs-link
-          a(href="#tab03") Заказать звонок
+          a Заказать сертификат
       +e.tabs-content
         +e.tab-item.active(id="tab01")
           +form(application)
-        +e.tab-item(id="tab02")
-          +form(questionheader)
-        +e.tab-item(id="tab03")
-          +form(call)
 
 
 
