--- a/src/css/partials/components/form-inner.scss
+++ b/src/css/partials/components/form-inner.scss
@@ -19,7 +19,7 @@
   }
 
   &__tabs-list {
-    text-align: left;
+    text-align: center;
     margin: 30px 0;
     padding: 0 5px;
     list-style: none;
@@ -28,6 +28,7 @@
 
   &__tabs-link {
     display: inline-block;
+    cursor: default;
 
     a {
     display: inline-block;
