--- a/src/css/partials/components/page.scss
+++ b/src/css/partials/components/page.scss
@@ -29,6 +29,16 @@
     font-family: $font-family;
   }
 
+  &__img {
+    width: 70%;
+    height: 400px;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
   &__subtitle {
     margin: 30px 0 40px 0;
     color: #21242b;
@@ -36,5 +46,37 @@
     font-family: 'Roboto';
     font-size: 30px;
     position: relative;
+  }
+
+  h3 {
+    font-size: 22px;
+  }
+
+  h4 {
+    font-size: 20px;
+  }
+  h5 {
+    font-size: 18px;
+  }
+
+  &__blockqoute {
+    color: #666e70;
+    font-size: 15px;
+    line-height: 1.8;
+    font-family: $font-family;
+    padding-left: 40px;
+    position: relative;
+    &:before {
+      content: '';
+      position: absolute;
+      height: 100%;
+      width: 3px;
+      background-color: $blue;
+      left: 0;
+    }
+  }
+  cite {
+    float: right;
+    padding-right: 50px;
   }
 }
