--- a/src/css/partials/components/promo.scss
+++ b/src/css/partials/components/promo.scss
@@ -9,12 +9,18 @@
     box-sizing: border-box;
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
     transition: .5s;
+    cursor: pointer;
   }
 
   &__img {
-    height: auto;
+    height: 250px;
     max-width: 100%;
     vertical-align: top;
+    img {
+      object-fit: cover;
+      height: 100%;
+      width: 100%;
+    }
   }
 
   &__item {
@@ -91,14 +97,16 @@
     line-height: 1.8;
     margin-top: 0;
     margin-bottom: 20px;
+    padding: 10px;
     @include mq($from:xs, $until:xl){
-      line-height: 1.2;
+      line-height: 1.8;
     }
   }
 
   &__btn {
     color: #fff;
     font-weight: bold;
+    margin-left: 10px;
     padding: 10px 40px 10px 20px;
     text-transform: uppercase;
     position: relative;
