--- a/src/html/partials/components/page.pug
+++ b/src/html/partials/components/page.pug
@@ -6,7 +6,9 @@ include ../abstracts/bemto/bemto.pug
   .container
     .row
       .col-xs-12
-        +e.H2.title Кому и зачем нужна сертификация?
+        +e.img
+          img(src="img/6.jpg" alt="6")
+        +e.H2.title H2 Кому и зачем нужна сертификация?
         +e.text Сертификация необходима организациям для подтверждения соответствия всем строгим требованиям и нормам технической документации. И это не просто очередная бюрократическая издержка — наличие сертификата одинаково важно для обеих сторон:
         +e.UL.list
           +e.LI.item <b>Покупатель</b> может быть спокоен относительно качества предлагаемой продукции или услуги. Осуществляется сертификация исключительно аккредитованными учреждениями, что исключает возможность наличия подтверждающих документов у недобросовестных компаний.
@@ -19,7 +21,21 @@ include ../abstracts/bemto/bemto.pug
           +e.LI.item повышения конкурентоспособности;
           +e.LI.item повышения лояльности финансовых компаний;
           +e.LI.item эффективной работы с госучреждениями;
+            +e.UL.list
+              +e.LI.item  вложенный список
+              +e.LI.item  вложенный список
+              +e.LI.item  вложенный список
           +e.LI.item возможности участвовать в международных тендерах.
+        +e.H3 заголовок 3 уровня
+        +e.H4 заголовок 4 уровня
+        +e.H5 заголовок 5 уровня
+        +e.OL.list
+          +e.LI.item пронумерованный список
+          +e.LI.item пронумерованный список
+          +e.LI.item пронумерованный список
+          +e.LI.item пронумерованный список
+        +e.BLOCKQUOTE.blockqoute цитата: соответствие требованиям, установленным законодательно. Выпустить в свободное обращение товары, входящие в утвержденный перечень, не имея на них нужных сертификатов, попросту невозможно.Выпустить в свободное обращение товары, входящие в утвержденный перечень, не имея на них нужных сертификатов, попросту невозможно.Выпустить в свободное обращение товары, входящие в утвержденный перечень, не имея на них нужных сертификатов, попросту невозможно.
+        +e.CITE Автор цитаты
 +b.SECTION.services
   .container
     .row
